[NCF-437] words from expert center align issue

--- a/docroot/profiles/unicef/themes/custom/vss/css/style.css
+++ b/docroot/profiles/unicef/themes/custom/vss/css/style.css
@@ -856,7 +856,8 @@ body .absoluteclass {
     border-radius: 50%; }
 
 .block-hero-banner-block .hero-wrapper .hero-col {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  min-height: 350px; }
 
 .block-hero-banner-block .hero-wrapper a {
   text-decoration: none;
@@ -871,56 +872,58 @@ body .absoluteclass {
     line-height: 32px;
     font-weight: 400;
     font-size: 1.42em;
-    margin-top: 24px;
-    min-height: 120px; }
+    margin-top: 24px; }
+
+.wrapper {
+  overflow: hidden; }
 
 /* Words from experts*/
-.bg-banner {
+#block-wordsfromexperts .bg-banner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   background: url("../images/bg-words_from_experts.png") no-repeat center;
   background-size: 1240px 795.62px; }
 
-h2.block-title {
+#block-wordsfromexperts h2.block-title {
   text-align: center;
   font-size: 36px;
   font-weight: 500; }
 
-.content-wrapper {
+#block-wordsfromexperts .content-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
 
-.field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item p {
+#block-wordsfromexperts .field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item p {
   padding: 8%;
   margin-top: 10%;
   font-size: 20px;
   line-height: 28px; }
 
-.field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item h2 {
+#block-wordsfromexperts .field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item h2 {
   float: right;
   margin-right: 10%;
   margin-top: 10%;
   color: #CB9CA1;
   font-size: 48px; }
 
-.banner-parent {
+#block-wordsfromexperts .banner-parent {
   padding: 20%; }
 
 @media screen and (max-width: 767px) {
-  .experts-img {
+  #block-wordsfromexperts .experts-img {
     display: none; }
-  .bg-banner {
+  #block-wordsfromexperts .bg-banner {
     background-size: 100% 100%; }
-  .field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item p {
+  #block-wordsfromexperts .field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item p {
     padding: 8%;
     margin-top: 10%;
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
     word-wrap: break-word; }
-  h2.block-title {
+  #block-wordsfromexperts h2.block-title {
     text-align: center;
     font-size: 20px;
     font-weight: 500;
@@ -1170,7 +1173,8 @@ article p {
       height: 28px;
       border-radius: 50%; }
   .block-hero-banner-block .hero-wrapper .hero-col {
-    margin-bottom: 24px; }
+    margin-bottom: 24px;
+    min-height: 250px; }
   .block-hero-banner-block .hero-wrapper a {
     text-decoration: none;
     color: #000; }
