--- a/docroot/profiles/unicef/themes/custom/vss/theme-resources/scss/base.scss
+++ b/docroot/profiles/unicef/themes/custom/vss/theme-resources/scss/base.scss
@@ -1088,6 +1088,7 @@ body {
   .hero-wrapper{
     .hero-col{
       margin-bottom: 20px;
+      min-height: 350px;
     }
     a{
        text-decoration: none;
@@ -1104,63 +1105,77 @@ body {
         font-weight: 400;
         font-size: $header-logo-font  ;
         margin-top: 24px;
-        min-height: 120px;
+        
       }
     }
   }
 }
+.wrapper{
+  overflow: hidden;
+}
 /* Words from experts*/
-
-.bg-banner {
-  display: flex;
-  background: url("../images/bg-words_from_experts.png") no-repeat center;
-  background-size: 1240px 795.62px;
-}
-
-h2.block-title {
-  text-align: center;
-  font-size: 36px;
-  font-weight: 500;
-}
-.content-wrapper{
-  display: flex;
-}
-
-.field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item p{ 
-  padding: 8%;
-  margin-top: 10%;
-  font-size: 20px;
-  line-height: 28px;
-}
-.field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item h2{ 
-float: right;
-margin-right: 10%;
-margin-top: 10%;
-color:#CB9CA1;
-font-size: 48px
-;
-}
-.banner-parent{padding: 20%;}
-
-@media screen and (max-width: 767px) {
-  .experts-img {
-    display: none;
-  }
+#block-wordsfromexperts {
   .bg-banner {
-    background-size: 100% 100%;
+    display: flex;
+    background: url("../images/bg-words_from_experts.png") no-repeat center;
+    background-size: 1240px 795.62px;
   }
-  .field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item p{ 
-    padding: 8%;
-    margin-top: 10%;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    word-wrap: break-word;
-  }
+
   h2.block-title {
     text-align: center;
-    font-size: 20px;
+    font-size: 36px;
     font-weight: 500;
+  }
+
+  .content-wrapper {
+    display: flex;
+  }
+
+  .field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item p {
+    padding: 8%;
+    margin-top: 10%;
+    font-size: 20px;
     line-height: 28px;
+  }
+
+  .field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item h2 {
+    float: right;
+    margin-right: 10%;
+    margin-top: 10%;
+    color: #CB9CA1;
+    font-size: 48px;
+
+  }
+
+  .banner-parent {
+    padding: 20%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #block-wordsfromexperts {
+    .experts-img {
+      display: none;
+    }
+
+    .bg-banner {
+      background-size: 100% 100%;
+    }
+
+    .field.field--name-body.field--type-text-with-summary.field--label-hidden.field--item p {
+      padding: 8%;
+      margin-top: 10%;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      word-wrap: break-word;
+    }
+
+    h2.block-title {
+      text-align: center;
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 28px;
+    }
   }
 }
