--- a/docroot/profiles/unicef/themes/custom/vss/theme-resources/scss/responsive.scss
+++ b/docroot/profiles/unicef/themes/custom/vss/theme-resources/scss/responsive.scss
@@ -334,6 +334,7 @@
   .hero-wrapper{
     .hero-col{
       margin-bottom: 24px;
+      min-height: 250px;
     }
     a{
        text-decoration: none;
